k8s/kong/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fcg-api-gateway
  namespace: default
  annotations:
    konghq.com/plugins: valida-jwt-plugin

spec:
  ingressClassName: kong

  rules:
    - http:
        paths:

          - path: /usuarios
            pathType: Prefix
            backend:
              service:
                name: users-api
                port:
                  number: 8080

          - path: /catalogo
            pathType: Prefix
            backend:
              service:
                name: catalog-api
                port:
                  number: 8080
